--- a/SMO AZS/SMO AZS.csproj
+++ b/SMO AZS/SMO AZS.csproj
@@ -423,6 +423,7 @@
       <DependentUpon>SMOAZSModel.edmx</DependentUpon>
       <LastGenOutput>SMOAZSModel.cs</LastGenOutput>
     </Content>
+    <Content Include="Script\db-script.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.2.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.2.1\build\MaterialDesignThemes.targets')" />
